--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2023-12-18 17:04:02</td>\n",
        "      <td>በቀን አንዴ ብቻ የሚባለው የቢዝነስ አማካሪ  በ 10,000 ብር ብቻ የተ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👈👈👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -246,7 +246,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2023-11-03 16:14:39</td>\n",
        "      <td>ዶክተርስ ኢትዮጵያ በ አዲስ አቀራረብ በ ቴሌቪዥን ፕሮግራሙን ለመጀመር ከ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -262,7 +262,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2023-09-16 07:54:32</td>\n",
        "      <td>ከ HIV የተፈወሰ ሰው አጋጥሟችሁ ያቃል ? ፈውስ እና ህክምና ? ሙሉ ቪ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -278,7 +278,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2023-08-29 17:20:05</td>\n",
        "      <td>** ዶክተርስ ኢትዮጽያ በአዲስ ፕሮገራም ጀመረ** ማረጥ  (**ሜኖፖዝ )...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -286,7 +286,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-08-02 17:42:08</td>\n",
        "      <td>ክረምቱን ስፖርት መስራት አስበው ጂም ለመግባት ካልቻሉ ባሉበት ቦታ ሆነው...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -294,7 +294,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-06-12 17:15:47</td>\n",
        "      <td>ስፖርት የመስራት ሱስ ይኖር ይሆን? በአሁኑ ወቅት ብዙ የስፖርት መስሪያ ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -302,7 +302,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-05-31 17:51:13</td>\n",
        "      <td>ድንገተኛ አደጋ / የአጥንት ስብራት አያርገውና ድንገተኛ የሆነ አደጋ ቢደ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -310,7 +310,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-05-20 18:04:53</td>\n",
        "      <td>ከትንሽ ግዚያት በፊት ስፖርት መስራት እንደ ቅንጦት ይታይ ነበር አሁን ላ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -318,7 +318,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-05-15 15:59:10</td>\n",
        "      <td>**ልጆች ላላችሁ / አባት እናት ወይንም እህት ወንድም / በቅርቡ ልጅ ለ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -326,7 +326,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-05-07 18:22:14</td>\n",
        "      <td>**በብዙ ማህበራዊ ሚዲያዎች በ ከፋተኛ ሁኔታ እየተሸጠ ያለው  ፕሮቲን- ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇👇👇👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -422,7 +422,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-04-24 17:11:09</td>\n",
        "      <td>ፈጣን የ ቦርጭ ማጥፊያ ዘዴ ወንድም ሴትም ላይ ቦርጭ ሊኖር ይችላል ብዙ ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -486,7 +486,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-04-19 17:38:05</td>\n",
        "      <td>ከ ፆም በኋላ ፈፅሞ ማድረግ የሌለብን የገሮች ምንድን ናቸው? አመጋገባችን...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -526,7 +526,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-04-12 18:01:18</td>\n",
        "      <td>**ስለ ወንድ ዘር ማወቅ ያለቦት ዋና ዋና ነገሮች  ቁመት ይጨምራል ? በ...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
@@ -598,7 +598,7 @@
        "      <td>Doctors Ethiopia</td>\n",
        "      <td>2022-04-03 16:15:29</td>\n",
        "      <td>ሽንቶን ሲሸኑ ምን አይነት ቀለም አለው ? ሽንት ላይ ደም አለ ሲባል ምን...</td>\n",
-       "      <td>No emoji</td>\n",
+       "      <td>👇👇👇👇👇👇👇</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
@@ -689,60 +689,60 @@
        "48    DoctorsET  Doctors Ethiopia  2022-04-01 17:02:54   \n",
        "49    DoctorsET  Doctors Ethiopia  2022-04-01 17:02:54   \n",
        "\n",
-       "                                              message emoji_used  \n",
-       "0   በቀን አንዴ ብቻ የሚባለው የቢዝነስ አማካሪ  በ 10,000 ብር ብቻ የተ...   No emoji  \n",
-       "1   ዶክተርስ ኢትዮጵያ በ አዲስ አቀራረብ በ ቴሌቪዥን ፕሮግራሙን ለመጀመር ከ...   No emoji  \n",
-       "2   ሞት በስኳር  ለልጆቻችን የምናሲዘው ምሳቃ ሳናቀው እድሚያቸውን ይቀንሰው ...   No emoji  \n",
-       "3   ከ HIV የተፈወሰ ሰው አጋጥሟችሁ ያቃል ? ፈውስ እና ህክምና ? ሙሉ ቪ...   No emoji  \n",
-       "4   በቅርብ ጊዜ በሃገራችን ላይ እየተስተዋለ ያለ የተመሳሳይ ፆታ ( Homos...   No emoji  \n",
-       "5   ** ዶክተርስ ኢትዮጽያ በአዲስ ፕሮገራም ጀመረ** ማረጥ  (**ሜኖፖዝ )...   No emoji  \n",
-       "6   ክረምቱን ስፖርት መስራት አስበው ጂም ለመግባት ካልቻሉ ባሉበት ቦታ ሆነው...   No emoji  \n",
-       "7   ስፖርት የመስራት ሱስ ይኖር ይሆን? በአሁኑ ወቅት ብዙ የስፖርት መስሪያ ...   No emoji  \n",
-       "8   ድንገተኛ አደጋ / የአጥንት ስብራት አያርገውና ድንገተኛ የሆነ አደጋ ቢደ...   No emoji  \n",
-       "9   ከትንሽ ግዚያት በፊት ስፖርት መስራት እንደ ቅንጦት ይታይ ነበር አሁን ላ...   No emoji  \n",
-       "10  **ልጆች ላላችሁ / አባት እናት ወይንም እህት ወንድም / በቅርቡ ልጅ ለ...   No emoji  \n",
-       "11  **በብዙ ማህበራዊ ሚዲያዎች በ ከፋተኛ ሁኔታ እየተሸጠ ያለው  ፕሮቲን- ...   No emoji  \n",
-       "12                                          [No Text]   No emoji  \n",
-       "13                                          [No Text]   No emoji  \n",
-       "14                                          [No Text]   No emoji  \n",
-       "15  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን      ስለ ፕሮቲን : ክሬቲን ፓውደ...   No emoji  \n",
-       "16  ከሳምንት በፊት በለቀቅነው ቦርጭን በህክምና እንዴት ማጥፋት ይቻላል በሚለ...   No emoji  \n",
-       "17                                          [No Text]   No emoji  \n",
-       "18                                          [No Text]   No emoji  \n",
-       "19                                          [No Text]   No emoji  \n",
-       "20                                          [No Text]   No emoji  \n",
-       "21                                          [No Text]   No emoji  \n",
-       "22  ሃያት ሆስፒታል ሜዲካል ኮሌጅ   ህክምና ለማግኘት አስበዋል ? የት መሄድ...   No emoji  \n",
-       "23  ፈጣን የ ቦርጭ ማጥፊያ ዘዴ ወንድም ሴትም ላይ ቦርጭ ሊኖር ይችላል ብዙ ...   No emoji  \n",
-       "24  የዶክተርስ ኢትዮጵያ እንግዳ  ትንሳይ ብርሃኑ  ISSA certified p...   No emoji  \n",
-       "25                                          [No Text]   No emoji  \n",
-       "26                                          [No Text]   No emoji  \n",
-       "27                                          [No Text]   No emoji  \n",
-       "28                                          [No Text]   No emoji  \n",
-       "29                                          [No Text]   No emoji  \n",
-       "30  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን             ልዮ ፕሮግራም  *...   No emoji  \n",
-       "31  ከ ፆም በኋላ ፈፅሞ ማድረግ የሌለብን የገሮች ምንድን ናቸው? አመጋገባችን...   No emoji  \n",
-       "32                                          [No Text]   No emoji  \n",
-       "33                                          [No Text]   No emoji  \n",
-       "34  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን    **ዶክተርስ ገበታ ፕሮግራም **...   No emoji  \n",
-       "35  Ethiopian Medical Association's 58th Medical C...   No emoji  \n",
-       "36  **ስለ ወንድ ዘር ማወቅ ያለቦት ዋና ዋና ነገሮች  ቁመት ይጨምራል ? በ...   No emoji  \n",
-       "37                                          [No Text]   No emoji  \n",
-       "38                                          [No Text]   No emoji  \n",
-       "39                                          [No Text]   No emoji  \n",
-       "40  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን ዶክተርስ ኢትዮጵያ            ...   No emoji  \n",
-       "41                                          [No Text]   No emoji  \n",
-       "42                                          [No Text]   No emoji  \n",
-       "43                                          [No Text]   No emoji  \n",
-       "44  ውድ የዶክተርስ ኢትዮጵያ ቤተሰቦች   ሃያት ሆስፒታል በአዲስ አስተዳደር ...   No emoji  \n",
-       "45  ሽንቶን ሲሸኑ ምን አይነት ቀለም አለው ? ሽንት ላይ ደም አለ ሲባል ምን...   No emoji  \n",
-       "46  ላለፉት 21 አመታት በመምህርነት በተለያዩ ትምህርት ቤቶች ውስጥ አስተምሬ...   No emoji  \n",
-       "47                                          [No Text]   No emoji  \n",
-       "48                                          [No Text]   No emoji  \n",
-       "49                                          [No Text]   No emoji  "
+       "                                              message      emoji_used  \n",
+       "0   በቀን አንዴ ብቻ የሚባለው የቢዝነስ አማካሪ  በ 10,000 ብር ብቻ የተ...            👈👈👇👇  \n",
+       "1   ዶክተርስ ኢትዮጵያ በ አዲስ አቀራረብ በ ቴሌቪዥን ፕሮግራሙን ለመጀመር ከ...               👇  \n",
+       "2   ሞት በስኳር  ለልጆቻችን የምናሲዘው ምሳቃ ሳናቀው እድሚያቸውን ይቀንሰው ...        No emoji  \n",
+       "3   ከ HIV የተፈወሰ ሰው አጋጥሟችሁ ያቃል ? ፈውስ እና ህክምና ? ሙሉ ቪ...            👇👇👇👇  \n",
+       "4   በቅርብ ጊዜ በሃገራችን ላይ እየተስተዋለ ያለ የተመሳሳይ ፆታ ( Homos...        No emoji  \n",
+       "5   ** ዶክተርስ ኢትዮጽያ በአዲስ ፕሮገራም ጀመረ** ማረጥ  (**ሜኖፖዝ )...          👇👇👇👇👇👇  \n",
+       "6   ክረምቱን ስፖርት መስራት አስበው ጂም ለመግባት ካልቻሉ ባሉበት ቦታ ሆነው...           👇👇👇👇👇  \n",
+       "7   ስፖርት የመስራት ሱስ ይኖር ይሆን? በአሁኑ ወቅት ብዙ የስፖርት መስሪያ ...          👇👇👇👇👇👇  \n",
+       "8   ድንገተኛ አደጋ / የአጥንት ስብራት አያርገውና ድንገተኛ የሆነ አደጋ ቢደ...         👇👇👇👇👇👇👇  \n",
+       "9   ከትንሽ ግዚያት በፊት ስፖርት መስራት እንደ ቅንጦት ይታይ ነበር አሁን ላ...          👇👇👇👇👇👇  \n",
+       "10  **ልጆች ላላችሁ / አባት እናት ወይንም እህት ወንድም / በቅርቡ ልጅ ለ...            👇👇👇👇  \n",
+       "11  **በብዙ ማህበራዊ ሚዲያዎች በ ከፋተኛ ሁኔታ እየተሸጠ ያለው  ፕሮቲን- ...  👇👇👇👇👇👇👇👇👇👇👇👇👇👇  \n",
+       "12                                          [No Text]        No emoji  \n",
+       "13                                          [No Text]        No emoji  \n",
+       "14                                          [No Text]        No emoji  \n",
+       "15  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን      ስለ ፕሮቲን : ክሬቲን ፓውደ...        No emoji  \n",
+       "16  ከሳምንት በፊት በለቀቅነው ቦርጭን በህክምና እንዴት ማጥፋት ይቻላል በሚለ...        No emoji  \n",
+       "17                                          [No Text]        No emoji  \n",
+       "18                                          [No Text]        No emoji  \n",
+       "19                                          [No Text]        No emoji  \n",
+       "20                                          [No Text]        No emoji  \n",
+       "21                                          [No Text]        No emoji  \n",
+       "22  ሃያት ሆስፒታል ሜዲካል ኮሌጅ   ህክምና ለማግኘት አስበዋል ? የት መሄድ...        No emoji  \n",
+       "23  ፈጣን የ ቦርጭ ማጥፊያ ዘዴ ወንድም ሴትም ላይ ቦርጭ ሊኖር ይችላል ብዙ ...          👇👇👇👇👇👇  \n",
+       "24  የዶክተርስ ኢትዮጵያ እንግዳ  ትንሳይ ብርሃኑ  ISSA certified p...        No emoji  \n",
+       "25                                          [No Text]        No emoji  \n",
+       "26                                          [No Text]        No emoji  \n",
+       "27                                          [No Text]        No emoji  \n",
+       "28                                          [No Text]        No emoji  \n",
+       "29                                          [No Text]        No emoji  \n",
+       "30  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን             ልዮ ፕሮግራም  *...        No emoji  \n",
+       "31  ከ ፆም በኋላ ፈፅሞ ማድረግ የሌለብን የገሮች ምንድን ናቸው? አመጋገባችን...          👇👇👇👇👇👇  \n",
+       "32                                          [No Text]        No emoji  \n",
+       "33                                          [No Text]        No emoji  \n",
+       "34  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን    **ዶክተርስ ገበታ ፕሮግራም **...        No emoji  \n",
+       "35  Ethiopian Medical Association's 58th Medical C...        No emoji  \n",
+       "36  **ስለ ወንድ ዘር ማወቅ ያለቦት ዋና ዋና ነገሮች  ቁመት ይጨምራል ? በ...     👇👇👇👇👇👇👇👇👇👇👇  \n",
+       "37                                          [No Text]        No emoji  \n",
+       "38                                          [No Text]        No emoji  \n",
+       "39                                          [No Text]        No emoji  \n",
+       "40  ዛሬ ምሽት 3:30 በ ፋና ቴሌቪዥን ዶክተርስ ኢትዮጵያ            ...        No emoji  \n",
+       "41                                          [No Text]        No emoji  \n",
+       "42                                          [No Text]        No emoji  \n",
+       "43                                          [No Text]        No emoji  \n",
+       "44  ውድ የዶክተርስ ኢትዮጵያ ቤተሰቦች   ሃያት ሆስፒታል በአዲስ አስተዳደር ...        No emoji  \n",
+       "45  ሽንቶን ሲሸኑ ምን አይነት ቀለም አለው ? ሽንት ላይ ደም አለ ሲባል ምን...         👇👇👇👇👇👇👇  \n",
+       "46  ላለፉት 21 አመታት በመምህርነት በተለያዩ ትምህርት ቤቶች ውስጥ አስተምሬ...        No emoji  \n",
+       "47                                          [No Text]        No emoji  \n",
+       "48                                          [No Text]        No emoji  \n",
+       "49                                          [No Text]        No emoji  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values in the cleaned DataFrame\n",
+    "missing_values = df_cleaned.isnull().sum()\n",
+    "missing_values[missing_values > 0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +787,7 @@
        "(3828, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +815,7 @@
        "19140"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,6 +823,108 @@
    "source": [
     "# Get the total number of elements in the DataFrame (rows * columns)\n",
     "df_cleaned.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Save the Cleaned Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Cleaned data saved successfully to '../data/processed/cleaned_telegram_data.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save cleaned data to CSV\n",
+    "save_cleaned_data(df_cleaned, \"../data/processed/cleaned_telegram_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Connect to Database**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from database_setup import get_db_connection, create_table, insert_data\n",
+    "engine = get_db_connection()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  **Create Table in PostgreSQL**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_table(engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  **Insert Data into Database**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the cleaned CSV into a DataFrame\n",
+    "cleaned_df = pd.read_csv(\"../data/cleaned_telegram_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values Before Insert: channel_name     0\n",
+      "channel_title    0\n",
+      "text_date        0\n",
+      "message          3\n",
+      "emoji_used       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ensure the 'message_date' column is in datetime format (to prevent NaT issues)\n",
+    "cleaned_df[\"text_date\"] = pd.to_datetime(cleaned_df[\"text_date\"], errors=\"coerce\")\n",
+    "\n",
+    "# Check if there are any missing values before inserting\n",
+    "missing_values = cleaned_df.isnull().sum()\n",
+    "print(\"Missing Values Before Insert:\", missing_values)"
    ]
   }
  ],
